--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,6 @@
         }
     ],
     "minimum-stability": "stable",
-    "repositories": [
-        {
-            "type": "package",
-            "package": {
-                "name": "bash-it/bash-it",
-                "version": "1.0.0",
-                "dist": {
-                    "url": "https://codeload.github.com/Bash-it/bash-it/zip/master",
-                    "type": "zip"
-                }
-            }
-        }
-    ],
     "require-dev": {
         "dotfiles/bash-plugin": "^1.0@dev",
         "dotfiles/core": "^1.0@dev",
@@ -40,6 +27,6 @@
         }
     },
     "require": {
-        "bash-it/bash-it": "1.0.0"
+        "bash-it/bash-it": "^0.1.0"
     }
 }
